snapshots/care/data4life/hc-util-sdk-kmp/error/1.14.0-SNAPSHOT/error-1.14.0-20220831.180107-1.pom.sha1
d6f5eca48a161c5b8f57de5956bbd7347c1bbecb